Improve documentation of JPMS vm parameters